--- a/pyt-contabilidad/pyt-app/src/resource/view/config/servicios/ConfigService.fxml
+++ b/pyt-contabilidad/pyt-app/src/resource/view/config/servicios/ConfigService.fxml
@@ -145,11 +145,23 @@
 										<Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Marcador" GridPane.columnIndex="2" GridPane.rowIndex="1" />
 										<ChoiceBox fx:id="marcador" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" GridPane.rowIndex="1" />
 										<Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#agregar" text="Agregar" GridPane.columnIndex="4" GridPane.rowIndex="1" />
-										<TableView prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.columnSpan="5" GridPane.rowIndex="2">
+										<TableView prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.columnSpan="5" GridPane.rowIndex="2" fx:id="lstMarcadoresCampos">
 											<columns>
-												<TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="190.0" text="Servicio" />
-												<TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="153.0" text="Columna" />
-												<TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="133.0" text="Marcador" />
+												<TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="190.0" text="Servicio" >
+													<cellValueFactory>
+														<PropertyValueFactory property="servicio" />
+													</cellValueFactory>
+												</TableColumn>
+												<TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="153.0" text="Columna" >
+													<cellValueFactory>
+														<PropertyValueFactory property="nombreCampo" />
+													</cellValueFactory>
+												</TableColumn>
+												<TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="133.0" text="Marcador" >
+												    <cellValueFactory>
+														<PropertyValueFactory property="marcador" />
+													</cellValueFactory>
+												</TableColumn>
 											</columns>
 										</TableView>
 										<HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.columnSpan="5" GridPane.halignment="CENTER" GridPane.rowIndex="3">
