--- a/pyt-contabilidad/pyt-app/src/main/resources/view/config/servicios/listConfigService.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/config/servicios/listConfigService.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane layoutX="0.0" layoutY="0.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="664.0"
+<BorderPane layoutX="0.0" layoutY="0.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
 	style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2"
-	fx:controller="org.pyt.app.beans.GuiaIngresos.ListIngresosBean">
+	fx:controller="org.pyt.app.beans.config.ListConfigBean">
 	<bottom>
 		<FlowPane alignment="CENTER" BorderPane.alignment="CENTER">
 			<children>
@@ -22,7 +22,7 @@
 						<Insets left="10.0" right="10.0" />
 					</FlowPane.margin>
 				</Button>
-				<Button fx:id="eliminar" mnemonicParsing="false" onAction="#del" text="Eliminar" />
+				<Button fx:id="btnDel" mnemonicParsing="false" onAction="#del" text="Eliminar" visible="false" />
 			</children>
 			<padding>
 				<Insets bottom="5.0" top="5.0" />
@@ -54,27 +54,11 @@
 			</bottom>
 			<center>
 				<TableView fx:id="tabla" editable="false" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity"
-					minWidth="-Infinity" onMouseClicked="#clickTable" prefWidth="618.0" tableMenuButtonVisible="false" BorderPane.alignment="CENTER">
-					<columns> 
-						<TableColumn fx:id="empresa" maxWidth="5000.0" minWidth="10.0" prefWidth="120.0" text="Empresa"/>
-						<TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="194.0" text="Descripcion">
+					minWidth="-Infinity" onMouseClicked="#clickTable" prefWidth="353.0" tableMenuButtonVisible="false" BorderPane.alignment="CENTER">
+					<columns>
+						<TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="349.0" text="Configuracion">
 							<cellValueFactory>
-								<PropertyValueFactory property="descripcion" />
-							</cellValueFactory>
-						</TableColumn>
-						<TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="109.0" text="Placa Vehiculo">
-							<cellValueFactory>
-								<PropertyValueFactory property="placaVehiculo" />
-							</cellValueFactory>
-						</TableColumn>
-						<TableColumn prefWidth="75.0" text="Entrada" >
-							<cellValueFactory>
-								<PropertyValueFactory property="fechaEntrada" />
-							</cellValueFactory>
-						</TableColumn>
-						<TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="110.0" text="Tel:. Contacto" >
-							<cellValueFactory>
-								<PropertyValueFactory property="telefonoContacto" />
+								<PropertyValueFactory property="configuracion" />
 							</cellValueFactory>
 						</TableColumn>
 					</columns>
@@ -86,32 +70,22 @@
 		</BorderPane>
 	</center>
 	<top>
-		<GridPane cache="false" depthTest="INHERIT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-			mouseTransparent="false" pickOnBounds="true" prefWidth="512.0" BorderPane.alignment="CENTER">
+		<GridPane cache="false" depthTest="INHERIT" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
+			minWidth="-Infinity" mouseTransparent="false" pickOnBounds="true" prefWidth="508.0" BorderPane.alignment="CENTER">
 			<children>
-				<Label alignment="CENTER_LEFT" prefHeight="22.0" prefWidth="121.0" text="Placa Vehiculo" textAlignment="LEFT" wrapText="true"
+				<Label alignment="CENTER_LEFT" prefHeight="22.0" prefWidth="121.0" text="Configuración" textAlignment="LEFT" wrapText="true"
 					GridPane.rowIndex="1">
 					<GridPane.margin>
 						<Insets bottom="5.0" top="5.0" />
 					</GridPane.margin>
 				</Label>
-				<Label prefHeight="27.0" prefWidth="96.0" text="Descripción" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="1">
-					<GridPane.margin>
-						<Insets bottom="5.0" left="10.0" top="5.0" />
-					</GridPane.margin>
-				</Label>
-				<TextField id="nombre" fx:id="placa" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+				<TextField fx:id="configuracion" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="1">
 					<GridPane.margin>
 						<Insets bottom="5.0" top="5.0" />
 					</GridPane.margin>
 				</TextField>
-				<TextField fx:id="descripcion" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="1">
-					<GridPane.margin>
-						<Insets bottom="5.0" right="5.0" top="5.0" />
-					</GridPane.margin>
-				</TextField>
 				<Label alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-					text="Lista Guias de Ingresos" textAlignment="CENTER" GridPane.columnSpan="4">
+					text="Listado Configuraciones" textAlignment="CENTER" GridPane.columnSpan="4">
 					<font>
 						<Font name="System Bold Italic" size="18.0" />
 					</font>
@@ -123,13 +97,12 @@
 				</Button>
 			</children>
 			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="135.0" minWidth="10.0" prefWidth="129.0" />
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="10.0" prefWidth="141.0" />
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="131.0" minWidth="10.0" prefWidth="96.0" />
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="205.0" minWidth="10.0" prefWidth="172.0" />
+				<ColumnConstraints hgrow="SOMETIMES" maxWidth="135.0" minWidth="10.0" prefWidth="135.0" />
+				<ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="10.0" prefWidth="150.0" />
+				<ColumnConstraints hgrow="SOMETIMES" maxWidth="131.0" minWidth="10.0" prefWidth="131.0" />
+				<ColumnConstraints maxWidth="0.0" prefWidth="0.0" />
 			</columnConstraints>
 			<rowConstraints>
-				<RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 				<RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 				<RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 				<RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
