--- a/pyt-contabilidad/pyt-app/src/main/resources/view/cuentaContable/listCuentaContable.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/cuentaContable/listCuentaContable.fxml
@@ -66,12 +66,9 @@
 								<PropertyValueFactory property="nombre" />
 							</cellValueFactory>
 						</TableColumn>
-						<TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="161.0" text="Descripcion">
-							<cellValueFactory>
-								<PropertyValueFactory property="descripcion" />
-							</cellValueFactory>
-						</TableColumn>
-						<TableColumn fx:id="tipoCuentaContable" />
+						<TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="161.0" text="Naturaleza" fx:id="naturaleza"/>
+						<TableColumn text="Tipo Cuenta" fx:id="tipo"/>
+						<TableColumn text="Tipo Plan Contable" fx:id="tipoCuentaContable" />
 					</columns>
 					<BorderPane.margin>
 						<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
