--- a/pyt-contabilidad/pyt-app/src/main/resources/view/config/servicios/ConfigService.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/config/servicios/ConfigService.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.*?>
 
-<BorderPane prefHeight="397.0" prefWidth="578.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.config.ConfigServiceBean">
+<BorderPane prefHeight="462.0" prefWidth="578.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.config.ConfigServiceBean">
   <bottom>
     <HBox alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="40.0" BorderPane.alignment="CENTER">
       <children>
@@ -40,7 +40,7 @@
                     </HBox>
                   </children>
                 </VBox>
-                <GridPane hgap="5.0" prefHeight="311.0" vgap="5.0" AnchorPane.bottomAnchor="36.0" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="10.0">
+                <GridPane hgap="5.0" prefHeight="311.0" vgap="5.0" AnchorPane.bottomAnchor="37.0" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="9.0">
                   <children>
                     <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Marcador" GridPane.columnIndex="0" GridPane.rowIndex="1" />
                     <TextField fx:id="nameMarcador" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="1" />
@@ -50,13 +50,14 @@
                         <TableColumn maxWidth="1.7976931348623157E308" minWidth="0.0" prefWidth="227.0" text="Marcador" fx:id="colMarcador" />
                       </columns>
                     </TableView>
-                    <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="21.0" prefWidth="479.0" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                    <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="21.0" prefWidth="479.0" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
                       <children>
                         <Button fx:id="btnEliminar" mnemonicParsing="false" onAction="#delMarcador" text="Eliminar" />
                       </children>
                     </HBox>
                     <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Nombre Archivo" GridPane.columnIndex="0" GridPane.rowIndex="0" />
                     <TextField fx:id="nameFiler" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                    <HBox fx:id="paginatorMarcadores" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
                   </children>
                   <columnConstraints>
                     <ColumnConstraints hgrow="SOMETIMES" maxWidth="157.0" minWidth="10.0" prefWidth="108.0" />
@@ -67,6 +68,7 @@
                     <RowConstraints maxHeight="96.0" minHeight="10.0" prefHeight="24.0" vgrow="SOMETIMES" />
                     <RowConstraints maxHeight="96.0" minHeight="10.0" prefHeight="24.0" vgrow="SOMETIMES" />
                     <RowConstraints maxHeight="228.0" minHeight="10.0" prefHeight="223.0" vgrow="SOMETIMES" />
+                    <RowConstraints maxHeight="97.0" minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES" />
                     <RowConstraints maxHeight="97.0" minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES" />
                   </rowConstraints>
                 </GridPane>
@@ -105,13 +107,14 @@
                         </TableColumn>
                       </columns>
                     </TableView>
-                    <HBox alignment="CENTER" prefHeight="39.0" prefWidth="396.0" GridPane.columnIndex="0" GridPane.columnSpan="5" GridPane.halignment="CENTER" GridPane.rowIndex="4">
+                    <HBox alignment="CENTER" prefHeight="39.0" prefWidth="396.0" GridPane.columnIndex="0" GridPane.columnSpan="5" GridPane.halignment="CENTER" GridPane.rowIndex="5">
                       <children>
                         <Button fx:id="btnDelServicio" contentDisplay="CENTER" mnemonicParsing="false" onAction="#delServicioCampo" text="Eliminar" />
                       </children>
                     </HBox>
                     <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Columna" textAlignment="CENTER" GridPane.columnIndex="3" GridPane.rowIndex="2" />
                     <TextField fx:id="columna" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+                    <HBox fx:id="paginatorServicios" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.columnSpan="5" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
                   </children>
                   <columnConstraints>
                     <ColumnConstraints hgrow="SOMETIMES" maxWidth="205.0" minWidth="10.0" prefWidth="61.0" />
@@ -125,6 +128,7 @@
                     <RowConstraints maxHeight="187.0" minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
                     <RowConstraints maxHeight="189.0" minHeight="10.0" prefHeight="23.0" vgrow="SOMETIMES" />
                     <RowConstraints maxHeight="191.0" minHeight="10.0" prefHeight="191.0" vgrow="SOMETIMES" />
+                    <RowConstraints maxHeight="107.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
                     <RowConstraints maxHeight="107.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
                   </rowConstraints>
                 </GridPane>
@@ -164,7 +168,7 @@
                         </TableColumn>
                       </columns>
                     </TableView>
-                    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.columnSpan="5" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+                    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.columnSpan="5" GridPane.halignment="CENTER" GridPane.rowIndex="4">
                       <children>
                         <Button fx:id="btnSaveMarcador" contentDisplay="CENTER" mnemonicParsing="false" onAction="#guardar" text="Guardar">
                           <HBox.margin>
@@ -174,6 +178,7 @@
                         <Button fx:id="btnDelMarcador" contentDisplay="CENTER" mnemonicParsing="false" onAction="#eliminar" text="Eliminar" />
                       </children>
                     </HBox>
+                    <HBox fx:id="paginatorAsociar" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.columnSpan="5" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
                   </children>
                   <columnConstraints>
                     <ColumnConstraints hgrow="SOMETIMES" maxWidth="75.0" minWidth="10.0" prefWidth="64.0" />
@@ -183,10 +188,11 @@
                     <ColumnConstraints hgrow="SOMETIMES" maxWidth="76.0" minWidth="10.0" prefWidth="76.0" />
                   </columnConstraints>
                   <rowConstraints>
-                    <RowConstraints maxHeight="60.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
-                    <RowConstraints maxHeight="91.0" minHeight="10.0" prefHeight="24.0" vgrow="SOMETIMES" />
-                    <RowConstraints maxHeight="211.0" minHeight="10.0" prefHeight="211.0" vgrow="SOMETIMES" />
-                    <RowConstraints maxHeight="60.0" minHeight="10.0" prefHeight="23.0" vgrow="SOMETIMES" />
+                    <RowConstraints maxHeight="60.0" minHeight="10.0" prefHeight="32.0" vgrow="SOMETIMES" />
+                    <RowConstraints maxHeight="91.0" minHeight="10.0" prefHeight="27.0" vgrow="SOMETIMES" />
+                    <RowConstraints maxHeight="248.0" minHeight="10.0" prefHeight="248.0" vgrow="SOMETIMES" />
+                    <RowConstraints maxHeight="60.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
+                    <RowConstraints maxHeight="60.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
                   </rowConstraints>
                 </GridPane>
               </children>
